--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 env:
   PACT_BROKER_BASE_URL: ${{ secrets.PACT_BROKER_BASE_URL }}
   PACT_BROKER_TOKEN: ${{ secrets.PACT_BROKER_TOKEN }}
+  PACT_PROVIDER: pactflow-example-provider-springboot
   REACT_APP_API_BASE_URL: http://localhost:8080
   GIT_COMMIT: ${{ github.sha }}
   GIT_REF: ${{ github.ref }}
